@@ -11532,6 +11532,122 @@ return|return
 name|lid
 return|;
 block|}
+enum|enum
+name|COLUMN_FAMILY_TYPES
+block|{
+name|NONE
+block|,
+comment|// there is no column family
+name|SINGLE
+block|,
+name|MULTIPLE
+comment|// there are more than one column family
+block|}
+comment|/**    * Determines the type of column family based on list of family/hfilePath pairs    *    * @param familyPaths List of Pair<byte[] column family, String hfilePath>    */
+specifier|public
+specifier|static
+name|COLUMN_FAMILY_TYPES
+name|getColumnFamilyType
+parameter_list|(
+name|List
+argument_list|<
+name|Pair
+argument_list|<
+name|byte
+index|[]
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
+name|familyPaths
+parameter_list|)
+block|{
+if|if
+condition|(
+name|familyPaths
+operator|==
+literal|null
+condition|)
+return|return
+name|COLUMN_FAMILY_TYPES
+operator|.
+name|NONE
+return|;
+name|COLUMN_FAMILY_TYPES
+name|familyType
+init|=
+name|COLUMN_FAMILY_TYPES
+operator|.
+name|SINGLE
+decl_stmt|;
+name|byte
+index|[]
+name|family
+init|=
+literal|null
+decl_stmt|;
+for|for
+control|(
+name|Pair
+argument_list|<
+name|byte
+index|[]
+argument_list|,
+name|String
+argument_list|>
+name|pair
+range|:
+name|familyPaths
+control|)
+block|{
+name|byte
+index|[]
+name|fam
+init|=
+name|pair
+operator|.
+name|getFirst
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|family
+operator|==
+literal|null
+condition|)
+block|{
+name|family
+operator|=
+name|fam
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+operator|!
+name|Bytes
+operator|.
+name|equals
+argument_list|(
+name|family
+argument_list|,
+name|fam
+argument_list|)
+condition|)
+block|{
+name|familyType
+operator|=
+name|COLUMN_FAMILY_TYPES
+operator|.
+name|MULTIPLE
+expr_stmt|;
+break|break;
+block|}
+block|}
+return|return
+name|familyType
+return|;
+block|}
 comment|/**    * Attempts to atomically load a group of hfiles.  This is critical for loading    * rows with multiple column families atomically.    *    * @param familyPaths List of Pair<byte[] column family, String hfilePath>    */
 specifier|public
 name|void
@@ -11552,8 +11668,18 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+comment|// we need writeLock for multi-family bulk load
 name|startBulkRegionOperation
-argument_list|()
+argument_list|(
+name|getColumnFamilyType
+argument_list|(
+name|familyPaths
+argument_list|)
+operator|==
+name|COLUMN_FAMILY_TYPES
+operator|.
+name|MULTIPLE
+argument_list|)
 expr_stmt|;
 name|this
 operator|.
@@ -19060,7 +19186,10 @@ comment|/**    * This method needs to be called before any public call that read
 specifier|private
 name|void
 name|startBulkRegionOperation
-parameter_list|()
+parameter_list|(
+name|boolean
+name|writeLockNeeded
+parameter_list|)
 throws|throws
 name|NotServingRegionException
 block|{
@@ -19087,9 +19216,22 @@ literal|" is closing"
 argument_list|)
 throw|;
 block|}
+if|if
+condition|(
+name|writeLockNeeded
+condition|)
 name|lock
 operator|.
 name|writeLock
+argument_list|()
+operator|.
+name|lock
+argument_list|()
+expr_stmt|;
+else|else
+name|lock
+operator|.
+name|readLock
 argument_list|()
 operator|.
 name|lock
@@ -19105,9 +19247,22 @@ name|get
 argument_list|()
 condition|)
 block|{
+if|if
+condition|(
+name|writeLockNeeded
+condition|)
 name|lock
 operator|.
 name|writeLock
+argument_list|()
+operator|.
+name|unlock
+argument_list|()
+expr_stmt|;
+else|else
+name|lock
+operator|.
+name|readLock
 argument_list|()
 operator|.
 name|unlock
@@ -19133,9 +19288,28 @@ name|void
 name|closeBulkRegionOperation
 parameter_list|()
 block|{
+if|if
+condition|(
 name|lock
 operator|.
 name|writeLock
+argument_list|()
+operator|.
+name|isHeldByCurrentThread
+argument_list|()
+condition|)
+name|lock
+operator|.
+name|writeLock
+argument_list|()
+operator|.
+name|unlock
+argument_list|()
+expr_stmt|;
+else|else
+name|lock
+operator|.
+name|readLock
 argument_list|()
 operator|.
 name|unlock
